--- a/scss/window/_titlebar.scss
+++ b/scss/window/_titlebar.scss
@@ -5,15 +5,15 @@ body {
     --titlebar-background-focused: none;
 }
 
-.mod-windows.is-hidden-frameless:not(.is-fullscreen) .titlebar-button-container.mod-right::before {
+.mod-windows.is-hidden-frameless:not(.is-fullscreen) .workspace:not(.is-right-sidedock-open) > .mod-root::before {
     content: "";
     position: absolute;
     top: 0;
     right: 0;
     display: block;
-    width: calc(6px + var(--frame-right-space));
-    height: 6px;
+    width: calc(var(--workspace-top-margin) + var(--frame-right-space));
+    height: var(--workspace-top-margin);
     background-color: var(--workleaves-background);
-    clip-path: polygon(6px 0, 100% 0, 100% 100%, 0 100%);
-    z-index: -1;
+    clip-path: polygon(var(--workspace-top-margin) 0, 100% 0, 100% 100%, 0 100%);
+    z-index: calc(var(--layer-popover) - 1);
 }
