--- a/scss/window/sidebars/_fas-bookmark-tabs.scss
+++ b/scss/window/sidebars/_fas-bookmark-tabs.scss
@@ -14,7 +14,8 @@ body {
         .workspace-tab-header-container-inner {
             height: calc(var(--header-height) + 0.5 * var(--cutout-corner-radius, 0));
             filter: drop-shadow(2px 2px 2px var(--shadow-color));
-            gap: 6px;
+            gap: var(--size-2-3);
+            margin-top: var(--workspace-top-margin);
         }
 
         .workspace-tab-header-container:hover {
@@ -37,12 +38,13 @@ body {
         .workspace-tabs:not(.mod-top) .workspace-tab-header-container-inner {
             margin-top: 0;
         }
+
         .mod-top .workspace-tab-container {
-            margin-top: 6px;
+            margin-top: var(--workspace-top-margin);
         }
 
         .workspace-leaf {
-            padding-top: calc(var(--header-height) - 6px);
+            padding-top: calc(var(--header-height) - var(--workspace-top-margin));
         }
     }
 }
