--- a/publish.css
+++ b/publish.css
@@ -1618,6 +1618,11 @@ body {
 */
 body {
   --fas-infobox-padding: var(--size-4-3);
+  --fas-infobox-max-width: 300px;
+}
+
+.callout[data-callout=fas-infobox][data-callout-metadata~=full-width] {
+  --fas-infobox-max-width: 100%;
 }
 
 :where(.fas-callout-infobox) .callout[data-callout=infobox],
@@ -1626,7 +1631,7 @@ body {
   --image-shadow-offset: 0;
   --hr-color: rgba(var(--callout-color), var(--callout-border-opacity));
   --heading-spacing: var(--p-spacing);
-  max-width: 300px;
+  max-width: var(--fas-infobox-max-width);
 }
 :where(.fas-callout-infobox) .callout[data-callout=infobox] .callout-title,
 .callout[data-callout=fas-infobox] .callout-title {
@@ -1977,22 +1982,22 @@ body {
 }
 
 /* Position */
-:where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout=infobox],
-:where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout=infobox][data-callout-metadata~=right],
-.markdown-preview-view .callout[data-callout=fas-infobox],
-.markdown-preview-view .callout[data-callout=fas-infobox][data-callout-metadata~=right] {
+:where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout=infobox]:not([data-callout-metadata~=full-width]),
+:where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout=infobox]:not([data-callout-metadata~=full-width])[data-callout-metadata~=right],
+.markdown-preview-view .callout[data-callout=fas-infobox]:not([data-callout-metadata~=full-width]),
+.markdown-preview-view .callout[data-callout=fas-infobox]:not([data-callout-metadata~=full-width])[data-callout-metadata~=right] {
   float: right;
   margin-left: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
 }
 
-:where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout=infobox][data-callout-metadata~=left],
-.markdown-preview-view .callout[data-callout=fas-infobox][data-callout-metadata~=left] {
+:where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout=infobox]:not([data-callout-metadata~=full-width])[data-callout-metadata~=left],
+.markdown-preview-view .callout[data-callout=fas-infobox]:not([data-callout-metadata~=full-width])[data-callout-metadata~=left] {
   float: left;
   margin-right: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
 }
 
-:where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout=infobox][data-callout-metadata~=center],
-.markdown-preview-view .callout[data-callout=fas-infobox][data-callout-metadata~=center] {
+:where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout=infobox]:not([data-callout-metadata~=full-width])[data-callout-metadata~=center],
+.markdown-preview-view .callout[data-callout=fas-infobox]:not([data-callout-metadata~=full-width])[data-callout-metadata~=center] {
   float: unset;
   margin-inline: auto;
 }
@@ -5030,4 +5035,21 @@ body {
   --tab-container-background: transparent;
 }
 
-/*# sourceMappingURL=publish.css.map */
+body {
+  --crop-root-corners: disable;
+}
+
+@container style(--crop-root-corners: enable) {
+  body:not(.fas-background-image) .workspace.is-left-sidedock-open:not(.is-right-sidedock-open) .mod-root .mod-top:nth-child(1 of .mod-top) .workspace-tab-header-container,
+  body:not(.fas-background-image) .workspace.is-left-sidedock-open.is-right-sidedock-open .mod-root .mod-top:nth-child(1 of .mod-top):not(.mod-top:nth-last-child(1 of .mod-top)) .workspace-tab-header-container {
+    -webkit-mask-image: radial-gradient(var(--cutout-corner-radius) at 0 var(--workspace-top-margin), transparent 100%, black);
+  }
+  body:not(.fas-background-image) .workspace.is-right-sidedock-open:not(.is-left-sidedock-open) .mod-root .mod-top:nth-last-child(1 of .mod-top) .workspace-tab-header-container,
+  body:not(.fas-background-image) .workspace.is-left-sidedock-open.is-right-sidedock-open .mod-root .mod-top:nth-last-child(1 of .mod-top):not(.mod-top:nth-child(1 of .mod-top)) .workspace-tab-header-container {
+    -webkit-mask-image: radial-gradient(var(--cutout-corner-radius) at 100% var(--workspace-top-margin), transparent 100%, black);
+  }
+  body:not(.fas-background-image) .workspace.is-left-sidedock-open.is-right-sidedock-open .mod-root .mod-top:nth-child(1 of .mod-top):nth-last-child(1 of .mod-top) .workspace-tab-header-container {
+    -webkit-mask-image: radial-gradient(var(--cutout-corner-radius) at 0 var(--workspace-top-margin), transparent 100%, black), radial-gradient(var(--cutout-corner-radius) at 100% var(--workspace-top-margin), transparent 100%, black);
+    mask-composite: intersect;
+  }
+}
