--- a/scss/mobile/_mobile.scss
+++ b/scss/mobile/_mobile.scss
@@ -1,8 +1,8 @@
-@forward '../shared/cutout-circles';
-@forward '../shared/cutouts';
-@forward '../shared/workleaves';
+@forward "../shared/cutout-circles";
+@forward "../shared/cutouts";
+@forward "../shared/workleaves";
 
-@use 'floating-mode-button';
+@use "floating-mode-button";
 
 .is-mobile {
     --font-ui-smaller: 13.5px;
