Fix blank callout not having any effect

--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -1,28 +1,29 @@
-@use 'callout-style';
+@use "callout-style";
 
-@use 'callout-autopsy';
-@use 'callout-caption';
-@use 'callout-cards-deck';
-@use 'callout-cite';
-@use 'callout-clue';
-@use 'callout-comic';
-@use 'callout-conversation';
+@use "callout-autopsy";
+@use "callout-blank";
+@use "callout-caption";
+@use "callout-cards-deck";
+@use "callout-cite";
+@use "callout-clue";
+@use "callout-comic";
+@use "callout-conversation";
 // @use 'callout-cutout';
-@use 'callout-email';
-@use 'callout-film-strip';
-@use 'callout-grid';
-@use 'callout-fas-infobox';
-@use 'callout-full-width-image';
-@use 'callout-letter';
-@use 'callout-masonry';
-@use 'callout-paper-fold';
-@use 'callout-pinned';
-@use 'callout-poem';
-@use 'callout-polaroid';
-@use 'callout-profile';
-@use 'callout-screen';
-@use 'callout-table-cards';
-@use 'callout-timeline';
-@use 'callout-tooltip';
+@use "callout-email";
+@use "callout-film-strip";
+@use "callout-grid";
+@use "callout-fas-infobox";
+@use "callout-full-width-image";
+@use "callout-letter";
+@use "callout-masonry";
+@use "callout-paper-fold";
+@use "callout-pinned";
+@use "callout-poem";
+@use "callout-polaroid";
+@use "callout-profile";
+@use "callout-screen";
+@use "callout-table-cards";
+@use "callout-timeline";
+@use "callout-tooltip";
 
-@use 'callouts-metadata';
+@use "callouts-metadata";
