--- a/scss/publish.scss
+++ b/scss/publish.scss
@@ -1,25 +1,26 @@
-@use 'foundations/text/font-import';
-@use 'foundations/colors/default_theme';
-@use 'foundations/fas-accessibility';
-@use 'foundations/text/text-wrap';
-@use 'foundations/shared-css-variables';
-@use 'foundations/publish-css-variables';
+@use "foundations/text/font-import";
+@use "foundations/colors/default_theme";
+@use "foundations/fas-accessibility";
+@use "foundations/text/text-wrap";
+@use "foundations/shared-css-variables";
+@use "foundations/publish-css-variables";
 
-@use 'editor/aside';
-@use 'editor/callouts/callouts';
-@use 'editor/code/code';
-@use 'editor/embeds/embeds';
-@use 'editor/footnotes';
-@use 'editor/headings/h1-display';
-@use 'editor/horizontal_rule';
-@use 'editor/image';
-@use 'editor/links/link-default';
-@use 'editor/links/link-external';
-@use 'editor/lists/lists';
-@use 'editor/tables/default-table';
+@use "editor/aside";
+@use "editor/callouts/callouts";
+@use "editor/code/code";
+@use "editor/embeds/embeds";
+@use "editor/footnotes";
+@use "editor/headings/h-display";
+@use "editor/headings/h-stroke";
+@use "editor/horizontal_rule";
+@use "editor/image";
+@use "editor/links/link-default";
+@use "editor/links/link-external";
+@use "editor/lists/lists";
+@use "editor/tables/default-table";
 
-@use 'plugins/core/file-explorer-hover';
+@use "plugins/core/file-explorer-hover";
 
-@use 'window/sidebars/fas-bg-textures';
-@use 'window/sidebars/sidebar-layout';
-@use 'window/workspace';
+@use "window/sidebars/fas-bg-textures";
+@use "window/sidebars/sidebar-layout";
+@use "window/workspace";
